ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-app.local      # Nom de domaine pour le routage
      http:
        paths:
          - path: /             # Route vers le frontend
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api          # Route vers l'API Gateway
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 9090
